--- a/blog/package.json
+++ b/blog/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
+    "seed": "node seeds/seed.js"
   },
   "author": "",
   "license": "ISC",
